cambios agregados bañate

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Gilberto</title>
 </head>
 <body>
-    <p>hola bby, estas guapa bombom </p>
+    <p>hola bby, ya te bañaste? encuerate xd </p>
 </body>
 </html>
